services/ui/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue3-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue3-site
  template:
    metadata:
      labels:
        app: vue3-site
    spec:
      containers:
        - name: vue3-site-container
          image: static-site:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "20m"
            limits:
              memory: "200Mi"
              cpu: "50m"
