services/ui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue3-site-service
spec:
  selector:
    app: vue3-site
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
